Fixed whitespace and added updated resume

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body { 
     background-color: #fffff0;
     /*ece4cd*/
-    padding-top: 10%;
+    padding-top: 7.5%;
 }
     
 .footer-links {
